docs: Add December 2025 changelog entry (v0.0.14)

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
+<Update label="December 31, 2025" description="v0.0.14">
+ - Added FAQ clarifying ISV-Participant relationship and participant_id usage
+ - Documented which endpoints do not require the x-participant-id header
+ - Updated Reference Data client examples to reflect simplified authentication
+</Update>
 <Update label="December 8, 2025" description="v0.0.13">
  - Added 25 REST API endpoints with full OpenAPI documentation
  - New sections: Authentication, Accounts, Orders, Positions, Market Data, Drop Copy
