docs: Deployment refresh trigger

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,9 @@ title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
+<Update label="January 3, 2026" description="v0.0.15">
+ - Documentation deployment refresh
+</Update>
 <Update label="December 31, 2025" description="v0.0.14">
  - Added slow consumer handling option for streaming endpoints with skip-to-head behavior
  - Proto files now available for direct download (polymarket-protos.zip)
